--- a/index.html
+++ b/index.html
@@ -156,20 +156,21 @@
         </div>
       </div>
 
-      <div class="feature-wide" data-aos="zoom-in">
-        <div class="row g-4 align-items-center">
-          <div class="col-lg-6">
-            <img src="assets/images/image13.png" alt="Làng Shirakawago" class="img-fluid rounded-4">
-          </div>
-          <div class="col-lg-6">
-            <h4>Làng Shirakawago</h4>
-            <p>Làng cổ chân núi Hakusan, di sản UNESCO, nổi bật với nhà mái tranh gassho-zukuri và không khí thanh bình.</p>
-            <div class="d-flex gap-3 flex-wrap">
-              <span class="pill"><i class="fi fi-rr-crown"></i> Di sản UNESCO</span>
-              <span class="pill"><i class="fi fi-rr-snowflake"></i> Tuyết phủ trắng xóa</span>
-              <span class="pill"><i class="fi fi-rr-home"></i> Kiến trúc cổ</span>
+      <div class="takayama-shirakawa" data-aos="zoom-in">
+        <div class="swiper shirakawa-slider">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <img src="assets/images/image13.png" alt="Làng Shirakawago" class="img-fluid rounded-4">
+            </div>
+            <div class="swiper-slide">
+              <img src="assets/images/image14.jpeg" alt="Shirakawago mùa đông" class="img-fluid rounded-4">
             </div>
           </div>
+          <div class="swiper-pagination"></div>
+        </div>
+        <div class="shirakawa-text">
+          <h3>Làng Shirakawago</h3>
+          <p>Nằm ở chân núi Hakusan, làng cổ Shirakawago là ngôi làng cổ xưa nhất ở xứ sở Phù Tang. Năm 1995, làng Shirakawa-go được UNESCO công nhận là di sản văn hóa thế giới. Shirakawago theo tiếng Nhật có nghĩa là bạch xuyên hương, nghĩa là ngôi làng của những con sông trắng. Đến với nơi này, du khách sẽ cảm thấy thời gian như trôi dạt về một thời kỳ rất xa trong quá khứ, cùng với một không khí yên bình và trong trẻo.</p>
         </div>
       </div>
     </div>
