--- a/index.html
+++ b/index.html
@@ -178,38 +178,29 @@
 
   <section class="section section-alt" id="kyoto">
     <div class="container">
-      <div class="section-title" data-aos="fade-up">
-        <p class="tag">Kyoto</p>
-        <h2>Cố đô nghìn năm - trái tim văn hóa Nhật Bản</h2>
-        <p>Kyoto sở hữu hàng ngàn đền chùa, khu vườn thiền tĩnh lặng và những khu phố cổ vẫn gìn giữ trọn vẹn nét truyền thống.</p>
+      <div class="kyoto-head text-center" data-aos="fade-up">
+        <h2 class="kyoto-title">KYOTO</h2>
+        <div class="kyoto-line"></div>
+        <p class="kyoto-intro">Kyoto, cố đô của Nhật Bản trong hơn một thiên niên kỷ, được mệnh danh là trái tim văn hóa và tinh thần của đất nước mặt trời mọc. Thành phố này nổi tiếng với hàng ngàn ngôi đền chùa cổ kính, những khu vườn thiền tĩnh lặng và các khu phố cổ nơi nét đẹp truyền thống vẫn được gìn giữ vẹn nguyên.</p>
       </div>
-      <div class="row g-4">
-        <div class="col-lg-4" data-aos="fade-up">
-          <div class="image-card">
-            <img src="assets/images/image15.png" alt="Kyoto cổ kính" class="img-fluid">
-            <div class="image-card-body">
-              <h5>Kyoto cổ kính</h5>
-              <p>Sắc xuân nhẹ nhàng hòa cùng nhịp sống cổ xưa của cố đô.</p>
-            </div>
-          </div>
+
+      <div class="kyoto-block" data-aos="zoom-in">
+        <img src="assets/images/image15.png" alt="Làng chài Ine no Funaya" class="img-fluid kyoto-hero">
+        <h3>Làng Chài Ine No Funaya</h3>
+        <p>
+            Nằm nép mình bên vịnh Ine, làng chài Ine no Funaya nổi tiếng với những ngôi nhà "funaya" truyền thống được xây dựng ngay trên mặt nước. Với kiến trúc độc đáo và khung cảnh thiên nhiên tuyệt đẹp, Ine no Funaya thường được ví như "Venice của Nhật Bản".
+        </p>
+        <p>
+            Dạo thuyền trên sông và cho Hải Âu ăn là các hoạt động phổ biến và thú vị dành cho du khách khi đến Làng chài. Ngoài ra, du khách cũng có thể tản bộ dọc bờ biển, ngắm nhìn khung cảnh thiên nhiên và cuộc sống bình yên nơi đây.
+        </p>
+      </div>
+
+      <div class="row g-4 kyoto-gallery" data-aos="fade-up">
+        <div class="col-md-8">
+          <img src="assets/images/image16.png" alt="Dạo thuyền và cho hải âu ăn" class="img-fluid rounded-3">
         </div>
-        <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
-          <div class="image-card">
-            <img src="assets/images/image16.png" alt="Làng chài Ine no Funaya" class="img-fluid">
-            <div class="image-card-body">
-              <h5>Làng chài Ine no Funaya</h5>
-              <p>Những ngôi nhà funaya bên vịnh Ine, được ví như Venice của Nhật Bản.</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4" data-aos="fade-up" data-aos-delay="200">
-          <div class="image-card">
-            <img src="assets/images/image17.png" alt="Dạo thuyền và cho hải âu ăn" class="img-fluid">
-            <div class="image-card-body">
-              <h5>Dạo thuyền, cho hải âu ăn</h5>
-              <p>Trải nghiệm thư giãn giữa thiên nhiên thanh bình của vùng vịnh.</p>
-            </div>
-          </div>
+        <div class="col-md-4">
+          <img src="assets/images/image17.png" alt="Kyoto cổ kính" class="img-fluid rounded-3">
         </div>
       </div>
     </div>
@@ -220,7 +211,12 @@
       <div class="section-title" data-aos="fade-up">
         <p class="tag">Tam đại tuyệt cảnh</p>
         <h2>Amanohashidate - Cầu trời nối đất</h2>
-        <p>Dải cát dài 3,2km tại Kyoto, được tôn vinh là một trong ba cảnh đẹp nhất Nhật Bản.</p>
+        <p>
+            Amanohashidate, hay còn gọi là "Cầu trời nối đất", là một dải cát dài khoảng 3,2km nằm ở tỉnh Kyoto, Nhật Bản. Với vẻ đẹp tự nhiên kỳ vĩ, Amanohashidate đã được người dân Nhật Bản tôn vinh là một trong ba cảnh đẹp nhất đất nước, cùng với núi Phú Sĩ và hồ Biwa.
+        </p>
+        <p>
+            Ngoài việc ngắm cảnh, du khách còn có thể tham gia nhiều hoạt động khác như đi thuyền, đi bộ đường dài, thuê xe đạp...Đặc biệt là hoạt động đạp xe trên không trung.
+        </p>
       </div>
       <div class="swiper amenohashi" data-aos="fade-up" data-aos-delay="100">
         <div class="swiper-wrapper">
@@ -239,47 +235,48 @@
     </div>
   </section>
 
-  <section class="section section-alt">
+  <section class="section section-alt" id="kyoto-experience">
     <div class="container">
-      <div class="section-title" data-aos="fade-up">
-        <p class="tag">Trải nghiệm Kyoto</p>
-        <h2>Từ phố cổ đến thiên đường mua sắm</h2>
-        <p>Gion, kênh Shirakawa, chợ Nishiki, Kawaramachi Dori và Rinku Premium Outlets.</p>
+      <div class="kyoto-experience-head text-center" data-aos="fade-up">
+        <h2 class="kyoto-experience-title">KYOTO</h2>
+        <div class="kyoto-experience-line"></div>
+        <p class="kyoto-experience-sub">Trải nghiệm Kyoto</p>
+        <p class="kyoto-experience-intro">Kênh Shirakawa, Chợ Nishiki, Kawaramachi Dori và Rinku Premium Outlets.</p>
       </div>
       <div class="row g-4">
-        <div class="col-md-6 col-lg-3" data-aos="fade-up">
-          <div class="image-card small">
-            <img src="assets/images/image21.jpeg" alt="Kênh Shirakawa" class="img-fluid">
-            <div class="image-card-body">
-              <h6>Kênh Shirakawa</h6>
-              <p>Dòng chảy thanh bình giữa phố cổ Kyoto.</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="50">
-          <div class="image-card small">
-            <img src="assets/images/image22.jpeg" alt="Chợ Nishiki" class="img-fluid">
-            <div class="image-card-body">
-              <h6>Chợ Nishiki</h6>
-              <p>Thiên đường ẩm thực của cố đô.</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="100">
-          <div class="image-card small">
+        <div class="col-md-6" data-aos="fade-up">
+          <div class="kyoto-card">
             <img src="assets/images/image23.jpeg" alt="Kawaramachi Dori" class="img-fluid">
-            <div class="image-card-body">
-              <h6>Kawaramachi Dori</h6>
-              <p>Phố mua sắm sầm uất và văn hóa.</p>
+            <div class="kyoto-card-body">
+              <h4>Kawaramachi Dori</h4>
+              <p>Kawaramachi Dori là một con phố mua sắm sầm uất nằm ở trung tâm thành phố Kyoto. Con phố này chạy dài từ bắc xuống nam, cắt qua nhiều khu vực khác nhau của thành phố. Kawaramachi Dori không chỉ là một nơi để mua sắm, mà còn là một địa điểm văn hóa, với nhiều ngôi đền, chùa và nhà hàng truyền thống.</p>
             </div>
           </div>
         </div>
-        <div class="col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="150">
-          <div class="image-card small">
+        <div class="col-md-6" data-aos="fade-up" data-aos-delay="50">
+          <div class="kyoto-card">
+            <img src="assets/images/image21.jpeg" alt="Kênh Shirakawa" class="img-fluid">
+            <div class="kyoto-card-body">
+              <h4>Kênh Shirakawa</h4>
+              <p>Nếu Phố Gion là một bức tranh sống động và nhộn nhịp mang hơi thở của Cố đô thì Shirakawa chính là dòng chảy nhẹ nhàng mang vẻ đẹp thanh bình và tĩnh lặng được bao quanh bởi những cây liễu rũ và hoa anh đào. Shirakawa là nơi có nhiều “machiya” - những ngôi nhà gỗ truyền thống đem đến cái nhìn thoáng qua về quá khứ của Kyoto.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6" data-aos="fade-up" data-aos-delay="100">
+          <div class="kyoto-card">
+            <img src="assets/images/image22.jpeg" alt="Chợ Nishiki" class="img-fluid">
+            <div class="kyoto-card-body">
+              <h4>Chợ Nishiki</h4>
+              <p>Chợ Nishiki là một trong những điểm đến không thể bỏ qua khi đến Kyoto, Nhật Bản. Được mệnh danh là \"nhà bếp của Kyoto\", chợ Nishiki là một thiên đường ẩm thực với hàng trăm gian hàng bán các loại thực phẩm tươi sống, chế biến sẵn và đồ ăn đường phố.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6" data-aos="fade-up" data-aos-delay="150">
+          <div class="kyoto-card">
             <img src="assets/images/image24.png" alt="Rinku Premium Outlets" class="img-fluid">
-            <div class="image-card-body">
-              <h6>Rinku Premium Outlets</h6>
-              <p>Trung tâm mua sắm phong cách Mỹ.</p>
+            <div class="kyoto-card-body">
+              <h4>Rinku Premium Outlets</h4>
+              <p>Rinku Premium Outlets là một trung tâm mua sắm lớn, tập trung chủ yếu vào các thương hiệu nổi tiếng trên thế giới với giá cả ưu đãi. Nơi đây được ví như một thị trấn nhỏ với kiến trúc mang phong cách Mỹ cổ điển, mang đến không gian mua sắm thoải mái và thú vị.</p>
             </div>
           </div>
         </div>
